chapter6/nginx-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-lb
spec: ports:
  - port: 8080
    targetPort: 8080
  selector:
    run: nginx-web
  type: LoadBalancer
